...
        <TopBar
          trailing={
            <SquareIconButton
              accessibilityLabel={Copy.settings.title}
              bleed="right"
              onPress={openSettings}
              testID="history-settings">
              <SettingsIcon />
            </SquareIconButton>
          }
        />
        <Text accessibilityRole="header" style={styles.title} testID="history-title">
          {Copy.history.title}
...
