...
              onPress: () => {
                closeDialog();
                void handleSignOut();
              },
            }}
            secondary={{ label: Copy.settings.signOut.confirm.cta.secondary, onPress: closeDialog }}
            testID="settings-dialog"
          />
        );
      case 'stillSignedIn':
        return (
          <ConfirmDialog
            visible
...
